[package]
name = "ripoff"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/agausmann/ripoff"
repository = "https://github.com/agausmann/ripoff"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.5", features = ["derive"] }
discid = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
ureq = { version = "2.7.1", features = ["json"] }
